--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <link rel="stylesheet" type="text/css" href="/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flarmio</title>
   </head>
   <body>
-    <h1 class="message">Hello world</h1>
+    <article class="card">
+      <form>
+        <h1 class="message">Form</h1>
+        <strong>Number</strong>
+        <input placeholder="Please enter a number" />
+        <button>Submit</button>
+      </form>
+    </article>
     <script type="module" src="/index.ts"></script>
   </body>
 </html>
