--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <span id="warning"></span>
       </form>
     </article>
-    <script type="module" src="/index.ts"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
